--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
 	"main": "index.js",
 	"license": "GPL-3.0",
 	"dependencies": {
+		"@prisma/client": "2.15.0",
 		"@slack/bolt": "^2.1.1",
-		"dotenv": "^8.2.0",
-		"get-release": "^1.3.1",
-		"mongodb": "^3.6.3",
-		"node-fetch": "^2.6.1",
-		"sleep-synchronously": "^1.0.0"
+		"axios": "^0.21.1",
+		"dotenv": "^8.2.0"
 	},
 	"devDependencies": {
+		"@prisma/cli": "2.15.0",
+		"@types/node": "^14.14.22",
 		"nodemon": "^2.0.4"
 	},
 	"scripts": {
-		"start": "node -r dotenv/config src/index.ts",
+		"start": "node -r dotenv/config index.js",
 		"dev": "nodemon -r dotenv/config index.js"
 	}
 }
