--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 		"@prisma/client": "2.15.0",
 		"@slack/bolt": "^2.1.1",
 		"axios": "^0.21.1",
-		"dotenv": "^8.2.0"
+		"dotenv": "^8.2.0",
+		"ts-node": "^9.1.1",
+		"typescript": "^4.1.3"
 	},
 	"devDependencies": {
 		"@prisma/cli": "2.15.0",
@@ -15,7 +17,7 @@
 		"nodemon": "^2.0.4"
 	},
 	"scripts": {
-		"start": "tsc index.ts && node -r dotenv/config index.js",
-		"dev": "tsc index.ts && nodemon -r dotenv/config index.js"
+		"start": "ts-node -r dotenv/config index.ts",
+		"build": "tsc index.ts --outDir dist --pretty"
 	}
 }
